--- a/notebooks/Simple EDA.ipynb
+++ b/notebooks/Simple EDA.ipynb
@@ -118,6 +118,16 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Training set has 60000 intances(digits) and 785 features(pixels)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6747ddf63a794a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## A FUNCTION TO RESHAPE & PLOT IMAGES"
    ],
    "metadata": {
@@ -203,12 +213,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-24T20:36:25.564668600Z",
-     "start_time": "2024-03-24T20:36:25.416409200Z"
+     "end_time": "2024-03-24T20:37:48.996064600Z",
+     "start_time": "2024-03-24T20:37:48.872128900Z"
     }
    },
    "id": "43dc37aa57c3af2c",
-   "execution_count": 8
+   "execution_count": 10
   },
   {
    "cell_type": "code",
